# rules_swift_package_manager

./: .bazelrc  .gitignore  .mergify.yml  .shellcheckrc  .swiftformat  .swiftlint.yml  BUILD.bazel  CLAUDE.md  CODEOWNERS  MODULE.bazel  README.md  WORKSPACE  bazel_versions.bzl  bzlmod.md  ci.bazelrc  deps.bzl  do_renovate_post_upgrade  extensions.bzl  go.mod  go.sum  go_deps.bzl  nogo_config.json  shared.bazelrc
bzlmod/: BUILD.bazel  e2e_test_runner.sh
bzlmod/workspace/: BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  do_test  swift_deps_index.json
ci/: BUILD.bazel  ci_integration_test_params.bzl  ci_workflow.bzl  defs.bzl  providers.bzl
ci/internal/: BUILD.bazel  bzlmod_modes.bzl  ci_integration_test_params.bzl  ci_test_params.bzl  ci_test_params_suite.bzl  ci_workflow.bzl  providers.bzl
ci/tests/: BUILD.bazel  bzlmod_modes_tests.bzl  ci_test_params_tests.bzl
config_settings/apple_platform_type/: BUILD.bazel  apple_platform_types.bzl
config_settings/configuration/: BUILD.bazel  spm_configurations.bzl
config_settings/platform_type/: BUILD.bazel  spm_platforms.bzl
config_settings/spm_platform/: BUILD.bazel  spm_platforms.bzl
docs/: BUILD.bazel  README.md  bzlmod_extensions_overview.md  doc_infos.bzl  faq.md  internal_rules_and_macros_overview.md  legacy_quickstart.md  patch_swift_package.md  repository_rules_overview.md  rules_and_macros_overview.md  swift_package_caching.md  swift_package_registry.md
docs/design/: BUILD.bazel  high-level.md
examples/: BUILD.bazel  README.md  example_infos.bzl  http_archive_ext_deps_test_runner.sh  pkg_manifest_minimal_test_runner.sh  pkg_manifest_test_runner.sh  simple_test_runner.sh  test_runner.sh  test_utils.bzl
examples/MySwiftPackage/: Package.swift
examples/aws_crt_example/: .bazelrc  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  WORKSPACE  WORKSPACE.bzlmod  do_test
examples/aws_sdk_example/: BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  do_test
examples/firebase_example/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  WORKSPACE  bazel_for_xcodeproj  do_test  set_up_clean_test  swift_deps.bzl  swift_deps_index.json
examples/google_maps_example/: BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  do_test  swift_deps_index.json  swift_pkg_patches.yaml
examples/grdb_example/: BUILD.bazel  Dockerfile  MODULE.bazel  Package.resolved  Package.swift  README.md  WORKSPACE  WORKSPACE.bzlmod  do_test  docker_test.sh
examples/grpc_2_example/: MODULE.bazel  Package.resolved  Package.swift
examples/grpc_example/: .bazelrc  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  do_test  swift_deps_index.json
examples/grpc_package_example/: BUILD.bazel  MODULE.bazel  Package.swift  README.md  swift_deps_index.json
examples/http_archive_ext_deps/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  do_test  extensions.bzl  set_up_clean_test
examples/injectionnext_example/: BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md
examples/interesting_deps/: .bazelrc  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  WORKSPACE  do_test  main.swift  module_index.json  objc_test.m  set_up_clean_test  set_up_clean_test.HIDE  simple_test.sh  swift_deps.bzl  swift_deps_index.json
examples/ios_sim/: .bazelrc  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  WORKSPACE  do_test  module_index.json  set_up_clean_test  swift_deps.bzl  swift_deps_index.json  swift_pkg_patches.yaml
examples/kscrash_example/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod  do_test
examples/language_modes_example/: BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  tests.swift
examples/lots_of_repos_example/: .bazelignore  BUILD.bazel  BuildPackages.swift  MODULE.bazel  Package.resolved  Package.swift  README.md
examples/lottie_ios_example/: BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  swift_deps_index.json
examples/messagekit_example/: BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  do_test  set_up_clean_test  swift_deps_index.json
examples/module_aliases_example/: BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  do_test  main.swift
examples/modulemap_comments_example/: BUILD.bazel  MODULE.bazel  Package.swift  do_test  main.swift
examples/multiple_rules_spm_example/: BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  do_test  main.swift
examples/nimble_example/: BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  WORKSPACE  swift_deps.bzl  swift_deps_index.json
examples/objc_code/: BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  WORKSPACE  do_test  main.swift  module_index.json  objc_code_test.sh  set_up_clean_test  swift_deps.bzl  swift_deps_index.json  trustkit_test.sh
examples/phone_number_kit/: BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  WORKSPACE  set_up_clean_test  swift_deps.bzl  swift_deps_index.json
examples/pkg_manifest/: BUILD.bazel  Package.swift  WORKSPACE  swift_deps.bzl
examples/pkg_manifest_minimal/: BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  WORKSPACE  do_test  module_index.json  res_log.yml  set_up_clean_test  swift_deps.bzl  swift_deps_index.json
examples/public_hdrs/: BUILD.bazel  Package.swift  README.md  WORKSPACE  do_test  trustkit_test.sh
examples/registry_example/: .bazelrc  BUILD.bazel  Package.resolved  Package.swift  README.md  WORKSPACE  main.swift  swift_deps.bzl  swift_packages_index.json
examples/resources_example/: BUILD.bazel  (+6 more)
gazelle/: BUILD.bazel  config.go  constants.go  doc.go  generate.go  kinds.go  lang.go  module_files_collector.go  module_files_collector_test.go  resolve.go  rule_kinds.go  swift_config.go  update_repos.go  update_repos_test.go
release/: BUILD.bazel  README.md  archive_test_runner.sh  workspace_snippet.tmpl
swiftpkg/: BUILD.bazel  build_defs.bzl  defs.bzl
(+927 files in other folders)
