load("@bazel_binaries//:defs.bzl", "bazel_binaries")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load(
    "@rules_bazel_integration_test//bazel_integration_test:defs.bzl",
    "bazel_integration_test",
    "integration_test_utils",
)
load("//ci:defs.bzl", "ci_integration_test_params")

bzlformat_pkg(name = "bzlformat")

filegroup(
    name = "all_files",
    # Include the workspace directory and its children
    srcs = glob(["**"]),
    visibility = ["//:__subpackages__"],
)

sh_binary(
    name = "e2e_test_runner",
    testonly = True,
    srcs = ["e2e_test_runner.sh"],
    data = [
        "@rules_bazel_integration_test//tools:create_scratch_dir",
    ],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_starlib//shlib/lib:assertions",
    ],
)

# This test exists to be run as part of the BCR presubmit.
bazel_integration_test(
    name = "e2e_test",
    bazel_binaries = bazel_binaries,
    bazel_version = bazel_binaries.versions.current,
    test_runner = ":e2e_test_runner",
    workspace_files = integration_test_utils.glob_workspace_files("workspace") + [
        "//:runtime_files",
    ],
    workspace_path = "workspace",
)

ci_integration_test_params(
    name = "e2e_test_params",
    bzlmod_modes = ["enabled"],
    oss = [
        "macos",
        "linux",
    ],
    test_names = ["e2e_test"],
    visibility = ["//:__subpackages__"],
)
