load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load(
    "@contrib_rules_bazel_integration_test//bazel_integration_test:defs.bzl",
    "bazel_integration_tests",
    "integration_test_utils",
)
load("//:bazel_versions.bzl", "CURRENT_BAZEL_VERSION", "SUPPORTED_BAZEL_VERSIONS")

bzlformat_pkg(name = "bzlformat")

# Exclude this entire directory from having anything gnerated by Gazelle. That
# way the test cases won't be fixed by `bazel run //:gazelle` when run in this
# repository.
# gazelle:exclude **

# MARK: - Simple Example

sh_binary(
    name = "simple_test_runner",
    testonly = True,
    srcs = ["simple_test_runner.sh"],
    data = [
        "@contrib_rules_bazel_integration_test//tools:create_scratch_dir",
    ],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_starlib//shlib/lib:assertions",
    ],
)

bazel_integration_tests(
    name = "simple_test",
    bazel_versions = SUPPORTED_BAZEL_VERSIONS,
    test_runner = ":simple_test_runner",
    workspace_files = integration_test_utils.glob_workspace_files("simple") + [
        "//:local_repository_files",
    ],
    workspace_path = "simple",
)

# MARK: - Package Manifest example

sh_binary(
    name = "pkg_manifest_test_runner",
    testonly = True,
    srcs = ["pkg_manifest_test_runner.sh"],
    data = [
        "@contrib_rules_bazel_integration_test//tools:create_scratch_dir",
    ],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_starlib//shlib/lib:assertions",
    ],
)

bazel_integration_tests(
    name = "pkg_manifest_test",
    bazel_versions = SUPPORTED_BAZEL_VERSIONS,
    test_runner = ":pkg_manifest_test_runner",
    workspace_files = integration_test_utils.glob_workspace_files("pkg_manifest") + [
        "//:local_repository_files",
    ],
    workspace_path = "pkg_manifest",
)

# MARK: - Test Suites

# GH009: Add pkg_manifest_test to test_suite declarations

test_suite(
    name = "smoke_integration_tests",
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS,
    tests = [
        integration_test_utils.bazel_integration_test_name(
            "simple_test",
            CURRENT_BAZEL_VERSION,
        ),
    ],
    visibility = ["//:__subpackages__"],
)

test_suite(
    name = "all_integration_tests",
    # If you don't apply the test tags to the test suite, the test suite will
    # be found when `bazel test //...` is executed.
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS,
    tests = integration_test_utils.bazel_integration_test_names(
        "simple_test",
        SUPPORTED_BAZEL_VERSIONS,
    ),
    visibility = ["//:__subpackages__"],
)
