load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_path", "go_test")

# MARK: - Starlark

bzlformat_pkg(name = "bzlformat")

# MARK: - Integration Test

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

# MARK: - Gazelle Plugin

go_library(
    name = "gazelle",
    srcs = [
        "config.go",
        "doc.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "resolve.go",
        "update_repos.go",
    ],
    importpath = "github.com/cgrindel/swift_bazel/gazelle",
    visibility = ["//visibility:public"],
    deps = [
        "//gazelle/internal/spreso",
        "//gazelle/internal/stringslices",
        "//gazelle/internal/swift",
        "//gazelle/internal/swiftbin",
        "//gazelle/internal/swiftcfg",
        "//gazelle/internal/swiftpkg",
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
    ],
)

go_test(
    name = "gazelle_test",
    srcs = ["update_repos_test.go"],
    deps = [
        ":gazelle",
        "@bazel_gazelle//language:go_default_library",
        "@com_github_stretchr_testify//assert",
    ],
)

go_path(
    name = "godoc_root",
    deps = [
        ":gazelle",
    ],
)
