load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@io_bazel_rules_go//go:def.bzl", "go_path")

package_group(
    name = "go_packages",
    packages = [
        "//gazelle/...",
        "//tools/swift_deps_index/...",
    ],
)

# MARK: - Starlark

bzlformat_pkg(name = "bzlformat")

# MARK: - Integration Test

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

# MARK: - Gazelle Plugin

go_path(
    name = "godoc_root",
    deps = [
        "//gazelle/internal/jsonutils",
    ],
)
