load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load(
    "@cgrindel_bazel_starlib//bzlrelease:defs.bzl",
    "create_release",
    "generate_release_notes",
    "generate_workspace_snippet",
    "hash_sha256",
    "release_archive",
    "update_readme",
)

bzlformat_pkg(name = "bzlformat")

# MARK: - Release

generate_workspace_snippet(
    name = "generate_workspace_snippet",
    sha256_file = ":archive_sha256",
    template = "workspace_snippet.tmpl",
)

generate_release_notes(
    name = "generate_release_notes",
    generate_workspace_snippet = ":generate_workspace_snippet",
)

update_readme(
    name = "update_readme",
    generate_workspace_snippet = ":generate_workspace_snippet",
)

create_release(
    name = "create",
    workflow_name = "Create Release",
)

release_archive(
    name = "archive",
    srcs = ["//:local_repository_files"],
    out = "swift_bazel.tar.gz",
)

hash_sha256(
    name = "archive_sha256",
    src = ":archive",
    out = "swift_bazel.tar.gz.sha256",
)

build_test(
    name = "archive_build_test",
    targets = [
        ":archive",
        ":archive_sha256",
    ],
)
